aws/eks/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: myapp
  labels:
    app: myapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: myapp
# Port 80 is the port that the service listens on
# 8080 is where the service will forward traffic to on the pod
# ClusterIP exposes the service accessible only within the cluster
# Look for all pods with label: app: myapp
